[package]
name = "apigateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
