[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
warp = "0.3"
http-body-util = "0.1.3"
hyper = { version = "0.14", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
